# playground

./: .gitignore  README.md
analyse-tweets/: main.go
bash/: file-scraper.sh
bash/wap/: setup-wap.sh  start-wap.sh  stop-wap.sh
binary-division/: CMakeLists.txt
c-cpp/abundant-number/: readme.txt
c-cpp/binary-division/: argument.cpp  header.h
c-cpp/data-structure/: CMakeLists.txt  header.h
c-cpp/numerology-algorithm/: main.cpp
c-cpp/random/picker/: instructions.md
c/binary-division/: division.cpp  main.cpp
c/data-structure/: data.cpp
c/numerology-algorithm/: functions.cpp  header.h
c/random/stats/src/: header.h
data-structure/: data.cpp  header.h  main.cpp
experiments/: bitwise.c
go-db/src/: main.go
golang/analyse-tweets/: analyse.js  index.html  main.go  tweet.go
golang/db/src/: create-schema.sql
golang/go-db/src/: create-user.sql
golang/go-http/: home-http.go
golang/well-rested/: go.sum
golang/well-rested/src/server/: server.go
numerology-algorithm/: CMakeLists.txt  date.cpp  header.h  main.cpp
numerology-algorithm/src/: date.cpp  functions.cpp  header.h  main.cpp
opencv-display-image/src/: header.h  open.cpp
opencv-generate-image/: CMakeLists.txt
opencv-generate-image/src/: generate.cpp  header.h  random-shapes.cpp
opencv/display-image/: CMakeLists.txt
opencv/display-image/src/: header.h
opencv/generate-image/: CMakeLists.txt
opencv/generate-image/src/: header.h  random-shapes.cpp
ranco/: instructions.md
random-numbers/: CMakeLists.txt
random-numbers/src/: func.cpp  header.h  process.cpp  random.cpp
random-picker/: CMakeLists.txt  instructions.md  main.c  main.cpp
random-stats/: CMakeLists.txt
random-stats/src/: func.cpp  header.h  main.cpp
random/numbers/src/: func.cpp  header.h  process.cpp  random.cpp
random/picker/: list.txt  main.c
random/rust/: Cargo.toml
random/rust/src/: main.rs  random.rs
random/stats/src/: func.cpp  header.h  main.cpp
rust/bevy-game/: Cargo.toml
rust/bevy-game/src/: main.rs
rust/hangman/: Cargo.toml
rust/hangman/src/: main.rs  utils.rs
rust/hello-world/: Cargo.toml
rust/multiplication-table/: Cargo.toml
rust/multiplication-table/src/: main.rs
rust/numerology-alg/: Cargo.toml
rust/numerology-alg/src/: main.rs
rust/pig-latin/: Cargo.toml
rust/pig-latin/src/: main.rs
rust/rand-guessr/: Cargo.toml
rust/rand-guessr/src/: main.rs
rust/random-possibility/src/: main.rs  tests.rs
rust/store/: Cargo.toml
rust/store/src/: cashier.rs  main.rs  product.rs  store.rs
web/colour/: package-lock.json  package.json
web/colour/public/: index.html  manifest.json
web/colour/src/: App.js  config.json  index.css  index.js
web/css-animations/: package-lock.json  package.json
web/css-animations/src/: App.css  App.js  spin.css  spin.jsx  wave.css  wave.jsx
web/css-animations/src/animations/: spin.css  spin.jsx  wave.css  wave.jsx
web/mutli-step-form/: package-lock.json  package.json
web/mutli-step-form/src/: App.js  steps.js
web/react-test/: package-lock.json  package.json
web/react-test/src/: App.css  App.js  about.jsx  houndImage.jsx  index.css
well-rested/: go.mod
well-rested/docs/: design.xcf
well-rested/src/: compile.sh  main.go
well-rested/src/resources/: pet.go
well-rested/src/server/: server.go
